If we have cached login data for a user, we should never 'exclude' their account in the list. This is especially true since getting the excluded users 'right' has proven to be pretty hard.
Created attachment 79284 [details] [review] Don't erroneously exclude users in wtmp or who have been cached Be strict about excluding users that we find in the local passwd file, but far more lenient about excluding users that have either logged in at some point, or been explicitly cached via 'CacheUser' This fixes regressions for users using network authentication via winbind or sssd.
Created attachment 79308 [details] [review] Don't treat remote users as system accounts Fix a bug in the logic that determines whether a user is a system account or not. Don't treat accounts that have no shadow information as remote users.
feel free to push.
Thanks.
Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.