Don't treat remote users as system accounts

Fix a bug in the logic that determines whether a user is a system
account or not. Don't treat accounts that have no shadow information
as remote users.

https://bugs.freedesktop.org/show_bug.cgi?id=64186